--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: lmedrano <lmedrano@student.42lausanne.ch>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/04/24 16:32:17 by lmedrano          #+#    #+#              #
-#    Updated: 2024/04/24 18:27:35 by lmedrano         ###   ########.fr        #
+#    Created: 2024/05/09 10:48:23 by lmedrano          #+#    #+#              #
+#    Updated: 2024/05/09 12:01:35 by lmedrano         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,17 +15,17 @@ ORANGE 		= \033[38;5;215m
 GREEN 		= \033[38;5;82m
 RESET 		= \033[0m
 
-SRCS 		= Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp main.cpp
+SRCS 		= main.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp
 
 OBJS 		= ${SRCS:.c=.o}
 
-NAME		= zoo
+NAME		= catsndogs
 
 CC 			= c++
 
 CFLAGS		= -Wall -Werror -Wextra -std=c++98
 
-CFLAGS		+= -fsanitize=thread -g3 
+#CFLAGS		+= -fsanitize=thread -g3 
 
 RM		= rm -rf
 
