fixed ex03 that was all buggy

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: lmedrano <lmedrano@student.42lausanne.ch>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/05/09 16:19:44 by lmedrano          #+#    #+#              #
-#    Updated: 2024/05/09 18:19:02 by lmedrano         ###   ########.fr        #
+#    Created: 2024/05/09 10:48:23 by lmedrano          #+#    #+#              #
+#    Updated: 2024/05/24 15:31:22 by lmedrano         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,9 +15,9 @@ ORANGE 		= \033[38;5;215m
 GREEN 		= \033[38;5;82m
 RESET 		= \033[0m
 
-SRCS 		= main.cpp Ice.cpp Cure.cpp Amateria.cpp Character.cpp MateriaSource.cpp 
+SRCS 		= main.cpp Character.cpp Cure.cpp Ice.cpp MateriaSource.cpp AMateria.cpp 
 
-OBJS 		= ${SRCS:.c=.o}
+OBJS 		= ${SRCS:.cpp=.o}
 
 NAME		= hell
 
@@ -29,14 +29,9 @@ CFLAGS		= -Wall -Werror -Wextra -std=c++98
 
 RM		= rm -rf
 
-all:		header $(NAME)
+all:		$(NAME)
 
 ${NAME}:	${OBJS}
-			@echo "$(RESET)$(ORANGE)ASSEMBLING $(NAME)$(RESET)"
-			${CC} ${CFLAGS} ${OBJS} -o ${NAME}
-			@echo "$(RESET)$(GREEN)$(NAME) HAS ASSEMBLED ✓$(RESET)"
-
-header:	
 			@echo "$(BLUE)                           $(RESET)"
 			@echo "$(BLUE)       Welcome mon p'tit ! $(RESET)"
 			@echo "$(BLUE)        ___  _____ ___  ___      _        $(RESET)"
@@ -46,17 +41,24 @@ header:
 			@echo "$(BLUE)     \___  |./ /___| |  | | (_| |   <  __/ $(RESET)"
 			@echo "$(BLUE)         |_/\_____/\_|  |_/\__,_|_|\_\___|......I'm so badass wesh $(RESET)"
 			@echo "$(BLUE)                           $(RESET)"
+			@echo "$(RESET)$(ORANGE)ASSEMBLING $(NAME)$(RESET)"
+			${CC} ${CFLAGS} ${OBJS} -o ${NAME}
+			@echo "$(RESET)$(GREEN)$(NAME) HAS ASSEMBLED ✓$(RESET)"
+
+%.o: 		%.cpp
+		$(CC) $(CFLAGS) -c $< -o $@
 
 clean:		
+			${RM} ${OBJS} ${NAME}
 			@echo "$(RESET)$(ORANGE)I'M CLEANING OUT MY CLOSET...$(RESET)"
 			@echo "$(RESET)$(GREEN)CLEANED ✓$(RESET)"
 
 fclean:		clean
 			@echo "$(RESET)$(ORANGE)ONE MORE TIME...$(RESET)"
-			${RM} ${NAME}
-			# ${RM} ${OBJS} ${NAME}
+			${RM} ${OBJS} ${NAME}
 			@echo "$(RESET)$(GREEN)ALL CLEANED ✓✓$(RESET)"
 
 re:			fclean all
 
 .PHONY:		all clean fclean re
+
